# temp-email

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.en.md  README.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt  run.py  test_redis_integration.py  test_redis_simple.py  test_redis_stress.py  test_stats_error_handling.py
.github/workflows/: deploy.yml
.serena/: project.yml
app/: __init__.py  config.py  main.py  models.py
app/i18n/: __init__.py  middleware.py  translations.py  utils.py
app/i18n/locales/: en-US.json  zh-CN.json
app/middleware/: __init__.py  logging_middleware.py
app/routers/: admin.py  email.py  i18n.py  pattern.py  system.py
app/services/: auth_service.py  cache_manager.py  cache_service.py  cloudflare_helper.py  code_extraction_strategy.py  code_service.py  email_service.py  env_service.py  html_sanitizer.py  kv_mail_service.py  link_extraction_service.py  llm_code_service.py  log_service.py  mail_service.py  maileroo_service.py  pattern_code_service.py  pattern_service.py  redis_client.py  redis_storage_service.py  storage_service.py  text_to_html_service.py
src/config/: index.ts
src/services/: code.service.ts  email.service.ts  mail.service.ts  storage.service.ts
src/types/: index.ts
static/: admin.html  docs-zh-cn.html  i18n-progress.md  index-i18n-updates.html  index.html  logs.html  redoc-zh-cn.html  swagger-ui-zh-cn.js  swagger-ui.html
static/css/: style.css
static/js/: app.js  i18n.js  language-switcher.js
workers/: deploy.sh  wrangler.toml
